syntax = "proto3";

package blog.proto;

option go_package = "blog/models/grpc/proto";

message Note {
  uint64 ID = 1; // @gotags: json:"id" gorm:"primaryKey"
  string Header = 2; // @gotags: json:"header" gorm:"header"
  string Body = 3; // @gotags: json:"body" gorm:"body"
  string Tags = 4; // @gotags: json:"tags" gorm:"tags"
  string CreatedAt = 5; // @gotags: json:"createdAt" gorm:"autoCreateTime"

}

message NoteDTO {
  string Header = 2; // @gotags: json:"header"
  string Body = 3; // @gotags: json:"body"
  repeated string Tags = 4; // @gotags: json:"tags"
}

message Notes {
  int32 Status = 1;
  repeated Note Notes = 2;
}

message EmptyRequest {
}

message EmptyResponse {
  int32 Status = 1;
}
